--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,7 +20,9 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
+        dotnet-version: 3.1.101    
+    - name: NuGet Restore
+      run: dotnet restore -v n
     - name: Build
       run: dotnet build
     - name: Setup SQL Server container
