--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101    
+        dotnet-version: 3.1.201
+        source-url: https://www.myget.org/F/azure-appservice/api/v3/index.json
     - name: NuGet Restore
       run: dotnet restore -v n
     - name: Build
